@startuml

title __GUI's Class Diagram__\n

  namespace NHF {
    namespace GUI {
      class NHF.GUI.ManageFactories {
          - addItemButton : JButton
          - addMachineButton : JButton
          - currentAmountFiled : JTextField
          - currentAmountLabel : JLabel
          - deleteItemButton : JButton
          - deleteMachineButton : JButton
          - factoryLabel : JLabel
          - factoryNameBox : JComboBox
          - factoryNameField : JTextField
          - factoryNameLabel : JLabel
          - fieldLength : int
          - itemBox : JComboBox
          - itemLabel : JLabel
          - itemNameField : JTextField
          - itemNameLabel : JLabel
          - itemPartsField : JTextField
          - itemPartsLabel : JLabel
          - itemPartsQuantityField : JTextField
          - itemPartsQuantityLabel : JLabel
          - machineBox : JComboBox
          - machineLabel : JLabel
          - machineNameField : JTextField
          - machineNameLabel : JLabel
          - outputItemField : JTextField
          - outputItemLabel : JLabel
          - productionTimeField : JTextField
          - productionTimeLabel : JLabel
          - renameFactoryButton : JButton
          - setupTimeField : JTextField
          - setupTimeLabel : JLabel
          - title : JLabel
          - titleItem : JLabel
          - titleMachine : JLabel
          - updateItemButton : JButton
          + ManageFactories()
          - buildFactoriesComboBox()
          - buildItemsComboBox()
          - buildMachinesComboBox()
          - createActionListeners()
          - defineLayout()
          - fillFactoryFields()
          - fillItemsFields()
          - fillMachinesFields()
          - initComponents()
          - switchFactory()
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.ManageOrders {
          - factoryLabel : JLabel
          - isPossibleLabel : JLabel
          - manufacturingTime : JLabel
          - orderDeadlineLabel : JLabel
          - orderDetailsLabel : JLabel
          - orderItemsLabel : JLabel
          - orderedItemsPanel : JPanel
          - ordersBox : JComboBox
          - ordersNameField : JTextField
          - ordersNameLabel : JLabel
          - renameButton : JButton
          - title : JLabel
          + ManageOrders()
          - buildOrderBox()
          - buildOrderDetails()
          - createActionListeners()
          - defineLayout()
          - initComponents()
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.MenuBar {
          - menuBarTexts : ArrayList<String[]>
          + MenuBar()
          + getMenuItem()
          + updateContent()
          - initComponents()
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.NewFactory {
          + NewFactory()
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.NewOrder {
          - addButton : JButton
          - factoryField : JTextField
          - factoryLabel : JLabel
          - itemsField : JTextField
          - itemsLabel : JLabel
          - itemsQuantityField : JTextField
          - itemsQuantityLabel : JLabel
          - nameField : JTextField
          - nameLabel : JLabel
          - timeField : JTextField
          - timeLabel : JLabel
          - title : JLabel
          + NewOrder()
          - createActionListeners()
          - defineLayout()
          - initComponents()
      }
    }
  }
  

  namespace NHF {
    namespace GUI {
      class NHF.GUI.Window {
          ~ mainPanel : JPanel
          + Window()
          - addMenuBarActionListeners()
      }
    }
  }
  

  NHF.GUI.ManageFactories -up-|> javax.swing.JPanel
  NHF.GUI.ManageFactories o-- NHF.Buildings.Factory : currentFactory
  NHF.GUI.ManageOrders -up-|> javax.swing.JPanel
  NHF.GUI.ManageOrders o-- NHF.Orders.Order : currentOrder
  NHF.GUI.MenuBar -up-|> javax.swing.JMenuBar
  NHF.GUI.NewFactory -up-|> javax.swing.JPanel
  NHF.GUI.NewOrder -up-|> javax.swing.JPanel
  NHF.GUI.Window -up-|> javax.swing.JFrame
  NHF.GUI.Window o-- NHF.GUI.MenuBar : menuBar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
